--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,17 @@
-123
+apply plugin: 'java'
+
+tasks.withType(JavaCompile){ //中文碼問題
+    options.encoding = 'UTF-8'
+}
+
+javadoc.options.encoding = 'UTF-8'
+compileJava.options.encoding = 'UTF-8'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'commons-codec:commons-codec:1.8'
+    testCompile 'junit:junit:4.+'
+}
