--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: java
-os: linux
+os:	linux
 dist: xenial
 
 jdk:
-    - openjdk11
-
+	- openjdk11
+	
 install:
-    - gradle assemble
-
-Script:
-    - gradle test
+	- gradle assemble
+	
+script:
+	- gradle test
