--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'java'
 apply plugin: "jacoco"
 
+plugins {
+	id "java"
+	id "jacoco"
+	id "org.sonarqube" version "2.7"
+}
+
 javadoc.options.encoding = 'UTF-8'
 compileJava.options.encoding = 'UTF-8'
 
